cmake_minimum_required(VERSION 3.10)
project(Mutatris LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
set(SOURCES main.cpp quadtris.cpp)
add_executable(Mutatris ${SOURCES})
target_link_libraries(Mutatris ${SDL2_LIBRARIES} SDL2_ttf::SDL2_ttf)
target_include_directories(Mutatris PUBLIC ${SDL2_INCLUDE_DIRS} /usr/local/include/SDL2 /usr/include/SDL2)
target_compile_options(Mutatris PRIVATE -O2)
message(STATUS "Configured")