cmake_minimum_required(VERSION 3.10)
project(Mutatris LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(ZLIB REQUIRED)
find_package(PNG REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
set(SOURCES ${CMAKE_SOURCE_DIR}/main.cpp ${CMAKE_SOURCE_DIR}/quadtris.cpp ${CMAKE_SOURCE_DIR}/util.cpp ${CMAKE_SOURCE_DIR}/loadpng.cpp ${CMAKE_SOURCE_DIR}/intro.cpp ${CMAKE_SOURCE_DIR}/puzzle.cpp)
add_executable(Mutatris ${SOURCES})
target_link_libraries(Mutatris ${SDL2_LIBRARIES} SDL2_ttf::SDL2_ttf ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})
target_include_directories(Mutatris PUBLIC ${SDL2_INCLUDE_DIRS} /usr/local/include/SDL2 /usr/include/SDL2 ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS})
target_compile_options(Mutatris PRIVATE -O2)
message(STATUS "Got it Configured")